--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,27 @@ body {
     -ms-user-select: none;
 }
 
+a{
+    font-weight: 900;
+    color: white;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
+}
+
 button {
     height: 40px;
     padding: 8px;
